--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
@@ -1,4 +1,4 @@
-{% extends "../webapp_content_base.html" %}
+{% extends "apps_base.html" %}
 {% block content-panel %}
 <div class="xui-reviewAllPage xui-page xa-page">
     <div class="xui-title pr">
