--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -1,17 +1,23 @@
 {% load workbench_filter %}
 
 {% ifequal component.type 'appkit.evaluatedescription' %}
-    <div class="wui-evaluate-container wa-evaluate-container">
+    <div id="dj_request_owner_id" class="wui-evaluate-container wa-evaluate-container pb10">
         <div class="wui-i-header">
-            <div class="wui-i-product-info">
-                <img src="">
-                <p class="wui-i-product-name"></p>
-                <p class="wui-i-product-desc"></p>
+            <div class="wui-i-product-info disT mb15 w">
+                <div class="wui-productImg disTc">
+                    <img src="" data-allow-autoplay="false">
+                </div>
+                <div id="dj_product_id" class="disTc vt pl10">
+                    <div class="wui-productname em85 c65">商品名</div>
+                    <div class="em85 c65">
+                       商品介绍
+                    </div>
+                </div>
             </div>
-            <div>
-                <span>商品评分</span>
-                <span class="wui-i-product-score">
-                    <span id='dj_product_score' data-value="5">
+            <div class="wui-reviewGrade">
+                <span class="c3 em9">商品评价</span>
+                <span class="wui-i-product-score wui-starGrade wa-starGrade">
+                    <span id='dj_product_score' data-value="5" class="wui-starGrade wui-starGrade5">
                         <i data-grade="1"></i>
                         <i data-grade="2"></i>
                         <i data-grade="3"></i>
@@ -21,50 +27,72 @@
                 </span>
             </div>
         </div>
-        <div class="wui-i-body wa-i-header">
-            <div class="wui-i-desc">
-                <p>还可以输入200字</p>
-                <textarea placeholder="长度在5-200之间\n写下购买体会或者给我们意见等, 可以为其他朋友在购买时提供参考和意见"></textarea>
-            </div>
-            <div class="wui-i-upload-img">
-                <span>上传图片</span>
-            </div>
-            <div class="wui-i-service-score">
-                <div>
-                    <span>服务态度</span>
-                    <span class="wui-i-manner-score">
-                        <span data-value="5">
-                            <i data-grade="1"></i>
-                            <i data-grade="2"></i>
-                            <i data-grade="3"></i>
-                            <i data-grade="4"></i>
-                            <i data-grade="5"></i>
-                        </span>
-                    </span>
+        <div class="wui-i-body">
+            <div class="wui-reviewText">
+                <div class="em7 c9 xui-limitNum">
+                    还可以输入200字
                 </div>
-                <div>
-                    <span>发货速度</span>
-                    <span class="wui-i-speed-score">
-                        <span data-value="5">
-                            <i data-grade="1"></i>
-                            <i data-grade="2"></i>
-                            <i data-grade="3"></i>
-                            <i data-grade="4"></i>
-                            <i data-grade="5"></i>
-                        </span>
-                    </span>
+                <div class="pr xui-reviewHint">
+                    <textarea id='dj_review_detail' cols="30" rows="10" class="em8"></textarea>
+                    <div class="pa em8 xui-i-box p5" style="top:0;left:0;margin-top:8px;color:#cbcbcb">
+                        <div>
+                            长度在5—200之间
+                        </div>写下购买体会或者给我们意见等，可以为其他朋友在购买时候提供参考和意见~
+                    </div>
                 </div>
-                <div>
-                    <span>物流服务</span>
-                    <span class="wui-i-logistical-score">
-                        <span data-value="5">
-                            <i data-grade="1"></i>
-                            <i data-grade="2"></i>
-                            <i data-grade="3"></i>
-                            <i data-grade="4"></i>
-                            <i data-grade="5"></i>
+            </div>
+            <div class="wui-productPhoto mt10 wui-i-upload-img">
+               <div class="wui-addPhoto wa-addPhoto mb10 fl pr">
+                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>              
+                </div>
+                <div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
+                </div>
+                <span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>                
+                <span class="em75 wa-text wui-text">上传图片</span>
+            </div>   
+            <div class="wui-separate"></div>     
+            <div class="wui-serviceReview mb20">
+                <h2 class="c3 em9">
+                    服务评分
+                    <span id="dj_order_review_is_created" data-value="0" class="cRed fr"></span>
+                </h2>              
+                <div class="wui-i-service-score wui-i-box">
+                    <div class="wui-serviceAttitude mb20">
+                        <span class="c65 em8">服务态度</span>
+                        <span class="wui-i-manner-score wa-starGrade wui-starGrade">
+                            <span id="dj_deliver_score" data-value='5' class="wui-starGrade wui-starGrade5">
+                                <i data-grade="1"></i>
+                                <i data-grade="2"></i>
+                                <i data-grade="3"></i>
+                                <i data-grade="4"></i>
+                                <i data-grade="5"></i>
+                            </span>
                         </span>
-                    </span>
+                    </div>
+                    <div class="wui-deliverySpeed mb20">
+                        <span class="c65 em8">发货速度</span>
+                        <span class="wui-i-speed-score xa-starGrade xui-starGrade">
+                            <span id="dj_deliver_score" data-value='5' class="wui-starGrade wui-starGrade5">
+                                <i data-grade="1"></i>
+                                <i data-grade="2"></i>
+                                <i data-grade="3"></i>
+                                <i data-grade="4"></i>
+                                <i data-grade="5"></i>
+                            </span>
+                        </span>
+                    </div>
+                    <div class="wui-logisticsService">
+                        <span class="c65 em8">物流服务</span>
+                        <span class="wui-i-logistical-score wa-starGrade wui-starGrade">
+                            <span id="dj_process_score" data-value='5' class="wui-starGrade wui-starGrade5">
+                                <i data-grade="1"></i>
+                                <i data-grade="2"></i>
+                                <i data-grade="3"></i>
+                                <i data-grade="4"></i>
+                                <i data-grade="5"></i>
+                            </span>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
