--- a/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
@@ -165,6 +165,17 @@
           alert('Failed to load pages in JSON. Please check it.');
         }
       });
+    };
+
+    function filterPageJson(page){
+        var components = page.components;
+        var cids = [];
+        for(var i= 0, len=components.length; i<len; i++){
+            var cid = components[i].cid;
+            if(cid > 4){ //取4是因为默认的settings中已存在2，3，4组件
+               cids.push(cid);
+            }
+        }
     }
     
     $(document).ready(function() {
@@ -202,11 +213,16 @@
       
       $('.xa-save').click(function() {
           var that = this;
+          console.warn('W.Synchronizer=================');
+          console.warn(W.Synchronizer);
+            if('ordinary' === select_type){
+                filterPageJson(W.Synchronizer.currentPage);
+            }
         // 保存model
         W.Synchronizer.manualSync(function(page, data) {
             that.disabled = true;
           var components = page.components;
-            console.warn('=================');
+            console.warn('components=================');
             console.warn(components);
           var relatedPageId = data['project_id'];
           var args = {
@@ -219,22 +235,22 @@
           } else {
             method = 'post';
           }
-          W.getApi().call({
-            app: 'apps/evaluate',
-            resource: 'evaluate',
-            method: method,
-            args: args,
-            success: function(data) {
-              W.showHint('success', '保存成功');
-              _.delay(function() {
-                window.location.href = '/apps/evaluate/evaluates/';
-              }, 500);
-            },
-            error: function(resp) {
-              W.showHint('error', '保存失败!');
-                that.disabled = false;
-            }
-          });
+{#          W.getApi().call({#}
+{#            app: 'apps/evaluate',#}
+{#            resource: 'evaluate',#}
+{#            method: method,#}
+{#            args: args,#}
+{#            success: function(data) {#}
+{#              W.showHint('success', '保存成功');#}
+{#              _.delay(function() {#}
+{#                window.location.href = '/apps/evaluate/evaluates/';#}
+{#              }, 500);#}
+{#            },#}
+{#            error: function(resp) {#}
+{#              W.showHint('error', '保存失败!');#}
+{#                that.disabled = false;#}
+{#            }#}
+{#          });#}
         });
       });
       
