--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -27,7 +27,7 @@
                 </span>
             </div>
         </div>
-        <div class="wui-i-body">
+        <div class="wui-i-body wa-i-body">
             <div class="wui-reviewText">
                 <div class="em7 c9 xui-limitNum">
                     还可以输入200字
