--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluating_list.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluating_list.html
@@ -1,4 +1,81 @@
 {% extends "apps_base.html" %}
+{% block css %}
+    <style>
+    .xui-orderReviewListPage .xui-title {
+        text-align: center;
+        line-height: 35px;
+        color: #333;
+    }
+    .xui-orderReviewListPage .xui-title a {
+        height: 35px;
+        width: 35px;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+    }
+    .xui-orderReviewListPage .xui-title i {
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        border-top: 1px solid #393939;
+        border-left: 1px solid #393939;
+        -webkit-transform: rotate(-45deg);
+        left: 14px;
+        top: 12px;       
+    }
+    .xui-orderReviewListPage .xui-orderReview .xui-i-box {
+        padding: 10px;
+        padding-bottom: 0;
+        background: #fff;
+        margin-bottom: 10px;        
+    }
+    .xui-orderReviewListPage .xui-orderNum {
+        height: 40px;
+        border-bottom: 1px solid #E5E5E5;
+        line-height: 40px;   
+    } 
+    .xui-orderReviewListPage .xui-product {
+        border-bottom: 1px solid #E5E5E5;
+    }
+    .xui-orderReviewListPage .xui-productInfo .xui-productImg {
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        vertical-align: middle;
+    }
+    .xui-orderReviewListPage .xui-productInfo .xui-productImg img {
+        max-width: 100%!important;
+        height: auto!important;
+        max-height: 60px;
+        display: block;
+        margin: 0 auto;
+    }
+    .xui-orderReviewListPage .xui-comment {
+        background: #CF0303;
+        color: #fff;
+    }
+    .xui-orderReviewListPage .xui-reviewBtn {
+        border-radius: 1px;
+        display: inline-block;
+        height: 26px;
+        line-height: 26px;
+        width: 70px;
+        text-shadow: none;
+        font-size: 0.95rem;
+    }
+    .xui-orderReviewListPage .xui-money {
+        line-height: 44px;
+    }
+    .xui-orderReviewListPage .xui-errorInfo{
+        background: url(/static_v2/img/orderEmpty.png) no-repeat;
+        height: 151px;
+        width: 113px;
+        -webkit-background-size: 100%;
+        background-size: 100%;
+        margin: 10vh auto;
+    }
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-orderReviewListPage pb20">
     <div class="xui-title pr" style="background-color:#f0f0f0;">
