--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -179,6 +179,52 @@ $(document).ready(function(){
     var view = new W.view.mall.ProductReviewListView({
         el: '.xui-productsPage'
     });
+
+    view.batchUpdateReviews = function(reviewIds, action) {
+        console.log(reviewIds);
+        W.getApi().call({
+            method: 'post',
+            app: 'apps/evaluate',
+            resource: 'apps/evaluate',
+            args:{
+                ids: reviewIds.join(','),
+                action: action
+            },
+            scope: this,
+            success: function(data) {
+                W.showHint('success', '操作成功！');
+                $('[data-ui-role="advanced-table"]').data('view').reload();
+                $('#bottomSelectAll').prop('checked', false);
+            },
+            error: function() {
+
+                W.showHint('error', '操作失败！');
+            }
+        })
+    }
+
+    view.onClickModify= function(event){
+        var $el = $(event.currentTarget);
+        var product_review_id = $el.attr("data-product-review-id");
+        var status = $el.attr("data-status");
+        W.getApi().call({
+            app: 'apps/evaluate',
+            resource: 'apps/evaluate',
+            method: 'post',
+            args: {
+                product_review_id: product_review_id,
+                status: status
+            },
+            success: function(){
+                W.showHint('success', '操作成功！');
+                $('[data-ui-role="advanced-table"]').data('view').reload();
+            },
+            error: function(){
+                W.showHint('error', '操作失败！');
+            }
+        })
+    },
+
     view.render();
 
 
@@ -277,6 +323,10 @@ $(document).ready(function(){
                 // alert(data);
             }
         });
+    });
+
+    $('.xa-batchPass').click(function(){
+
     });
 })
 </script>
