--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -176,54 +176,56 @@ a{
 
 <script type="text/javascript">
 $(document).ready(function(){
-    var view = new W.view.mall.ProductReviewListView({
-        el: '.xui-productsPage'
+    var evaluate_view = W.view.mall.ProductReviewListView.extend({
+        batchUpdateReviews: function(reviewIds, action) {
+            console.log(reviewIds);
+            W.getApi().call({
+                method: 'post',
+                app: 'apps/evaluate',
+                resource: 'evaluate_review',
+                args:{
+                    ids: reviewIds.join(','),
+                    action: action
+                },
+                scope: this,
+                success: function(data) {
+                    W.showHint('success', '操作成功！');
+                    $('[data-ui-role="advanced-table"]').data('view').reload();
+                    $('#bottomSelectAll').prop('checked', false);
+                },
+                error: function() {
+
+                    W.showHint('error', '操作失败！');
+                }
+            })
+        },
+
+        onClickModify: function(event){
+            var $el = $(event.currentTarget);
+            var product_review_id = $el.attr("data-product-review-id");
+            var status = $el.attr("data-status");
+            W.getApi().call({
+                app: 'apps/evaluate',
+                resource: 'evaluate_review',
+                method: 'post',
+                args: {
+                    product_review_id: product_review_id,
+                    status: status
+                },
+                success: function(){
+                    W.showHint('success', '操作成功！');
+                    $('[data-ui-role="advanced-table"]').data('view').reload();
+                },
+                error: function(){
+                    W.showHint('error', '操作失败！');
+                }
+            })
+        }
     });
 
-    view.batchUpdateReviews = function(reviewIds, action) {
-        console.log(reviewIds);
-        W.getApi().call({
-            method: 'post',
-            app: 'apps/evaluate',
-            resource: 'apps/evaluate',
-            args:{
-                ids: reviewIds.join(','),
-                action: action
-            },
-            scope: this,
-            success: function(data) {
-                W.showHint('success', '操作成功！');
-                $('[data-ui-role="advanced-table"]').data('view').reload();
-                $('#bottomSelectAll').prop('checked', false);
-            },
-            error: function() {
-
-                W.showHint('error', '操作失败！');
-            }
-        })
-    }
-
-    view.onClickModify= function(event){
-        var $el = $(event.currentTarget);
-        var product_review_id = $el.attr("data-product-review-id");
-        var status = $el.attr("data-status");
-        W.getApi().call({
-            app: 'apps/evaluate',
-            resource: 'apps/evaluate',
-            method: 'post',
-            args: {
-                product_review_id: product_review_id,
-                status: status
-            },
-            success: function(){
-                W.showHint('success', '操作成功！');
-                $('[data-ui-role="advanced-table"]').data('view').reload();
-            },
-            error: function(){
-                W.showHint('error', '操作失败！');
-            }
-        })
-    },
+    var view = new evaluate_view({
+        el: '.xui-productsPage'
+    });
 
     view.render();
 
@@ -323,10 +325,6 @@ $(document).ready(function(){
                 // alert(data);
             }
         });
-    });
-
-    $('.xa-batchPass').click(function(){
-
     });
 })
 </script>
