解决高级投票选手详情页被微信拉黑的问题

--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
@@ -197,7 +197,7 @@
 			<span class="wui-detail-user-name">{{player_details.name}}</span>
 		</div>
 		<div class="wui-detail-btn wa-detail-btn">
-			<button class="wa-detail-share">拉票</button>
+			<button class="wa-detail-share" style="display: none;">拉票</button>
 			<button class="wa-ivote" data-id="{{player_details.id}}" data-count="{{can_vote_count}}">投票</button>
 		</div>
 		<div class="wui-detail-middle">
