--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluate_relations.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluate_relations.html
@@ -90,7 +90,7 @@
 					${item.product_name}
 				</td>
 				<td>
-					${item.created_at}
+					${item.evaluate_count}
 				</td>
 				<td>
 					<a href="javascript:void(0);" class="ml5 xa-remove-relation">解除</a>
